src/tests/snapshots/gitu__tests__log__rendered_log_grep.snap
---
source: src/tests/log.rs
expression: ctx.redact_buffer()
---
                                                                                |
▌▸ 6c08cf7 Author Name 2024-02-16                                               |
▌    add second commit                                                          |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
styles_hash: 69291244ace5fa71
