src/tests/snapshots/gitu__tests__log__rendered_log_keeps_the_first_commit_when_the_renderer_greets_on_its_line.snap
---
source: src/tests/log.rs
expression: ctx.redact_buffer()
---
                                                                                |
 ───                                                                            |
▌▸ 8bb5532 add first commit                                                     |
                                                                                |
 ───                                                                            |
 ▸ 6c08cf7 add second commit                                                    |
                                                                                |
 ───                                                                            |
 ▸ 79e63f1 add third commit                                                     |
                                                                                |
 ───                                                                            |
 ▸ b66a0bf add initial-file                                                     |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
styles_hash: f7aa451e297d1163
