src/tests/snapshots/gitu__tests__log__rendered_log_limit.snap
---
source: src/tests/log.rs
expression: ctx.redact_buffer()
---
                                                                                |
▌▸ 8bb5532 Author Name 2024-02-16 (HEAD -> main)                                |
▌    add first commit                                                           |
                                                                                |
 ▸ 6c08cf7 Author Name 2024-02-16                                               |
     add second commit                                                          |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
styles_hash: 7adefe0f471a0a4b
