src/tests/snapshots/gitu__tests__log__rendered_log_show_acts_on_the_selected_commit.snap
---
source: src/tests/log.rs
expression: ctx.redact_buffer()
---
▌commit 6c08cf78a4544ae4dda8e6161a61070867c60246                                |
▌Author: Author Name <author@email.com>                                         |
▌Date:   Fri, 16 Feb 2024 11:11:00 +0100                                        |
▌                                                                               |
▌    add second commit                                                          |
▌                                                                               |
▌    Commit body goes here                                                      |
                                                                                |
 added      commit b/second commit                                              |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
styles_hash: 8026793d68818971
