src/tests/snapshots/gitu__tests__log__rendered_log_with_stat.snap
---
source: src/tests/log.rs
expression: ctx.redact_buffer()
---
                                                                                |
 ▸ 8bb5532 add first commit                                                     |
                                                                                |
  first commit | 0                                                              |
  1 file changed, 0 insertions(+), 0 deletions(-)                               |
                                                                                |
▌▸ 6c08cf7 add second commit                                                    |
▌                                                                               |
▌ second commit | 0                                                             |
▌ 1 file changed, 0 insertions(+), 0 deletions(-)                               |
                                                                                |
 ▸ 79e63f1 add third commit                                                     |
                                                                                |
  third commit | 0                                                              |
  1 file changed, 0 insertions(+), 0 deletions(-)                               |
                                                                                |
 ▸ b66a0bf add initial-file                                                     |
                                                                                |
  initial-file | 1 +                                                            |
  1 file changed, 1 insertion(+)                                                |
styles_hash: 4eb87c5e50ed4c2a
