src/tests/snapshots/gitu__tests__log__rendered_log_without_commit_marker_falls_back.snap
---
source: src/tests/log.rs
expression: ctx.redact_buffer()
---
▌8bb5532 main add first commit                                   Author Name __ |
 6c08cf7 add second commit                                       Author Name __ |
 79e63f1 add third commit                                        Author Name __ |
 b66a0bf origin/main add initial-file                            Author Name __ |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
styles_hash: 6a0c94a14d797ed
